SynProdGITV1/force-app/main/default/objects/Visit_Outcome__c/Visit_Outcome__c.object-meta.xml
<CustomObject>
    <description>To store Visit outcomes against Activities. This is due to Salesforce limitation of not being able to hold custom long text fields on Activities - Visit outcomes are moved to this object</description>
    <label>Visit Outcome</label>
    <nameField>
        <displayFormat>VO-{0000000}</displayFormat>
        <label>Visit Outcome Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Visit Outcomes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>