SynProdGITV1/force-app/main/default/objects/Visit_Outcome__c/fields/Call_Content_Minutes__c.field-meta.xml
<CustomField>
    <fullName>Call_Content_Minutes__c</fullName>
    <label>Follow-up Actions</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>