SynProdGITV1/force-app/main/default/objects/Visit_Outcome__c/fields/Outcome__c.field-meta.xml
<CustomField>
    <fullName>Outcome__c</fullName>
    <description>This field allows users to provide a comprehensive description, including successes, challenges, next steps, or follow-up actions.</description>
    <label>Outcome</label>
    <length>130768</length>
    <type>Html</type>
</CustomField>