SynProdGITV1/force-app/main/default/objects/Visit_Outcome__c/fields/Pre_call_Preparation__c.field-meta.xml
<CustomField>
    <fullName>Pre_call_Preparation__c</fullName>
    <label>Pre-call Preparation</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>