SynProdGITV1/force-app/main/default/objects/Visit_Outcome__c/fields/Visit_Outcome_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Visit_Outcome_External_Id__c</fullName>
    <description>Unique Identifier for the object</description>
    <externalId>true</externalId>
    <label>Visit Outcome External Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>